--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "whatsappbot",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+"scripts": {
+  "start": "node index.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,7 +15,6 @@
     "puppeteer": "^24.6.1",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
-    "venom-bot": "^5.3.0",
     "whatsapp-web.js": "^1.27.0"
   }
 }
